--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "6.2.0",
+    "@sentry/tracing": "6.2.0",
     "cors": "2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "mongoose": "5.11.18"
   },
   "devDependencies": {
-    "eslint": "^7.20.0",
-    "nodemon": "^2.0.7",
-    "standard": "^16.0.3"
+    "eslint": "7.20.0",
+    "nodemon": "2.0.7",
+    "standard": "16.0.3"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
