--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "lint": "npm run lint",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --verbose tests/notes.test.js",
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,16 +17,25 @@
     "@sentry/node": "6.2.0",
     "@sentry/tracing": "6.2.0",
     "cors": "2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "mongoose": "5.11.18"
   },
   "devDependencies": {
     "eslint": "7.20.0",
+    "jest": "^26.6.3",
     "nodemon": "2.0.7",
-    "standard": "16.0.3"
+    "standard": "16.0.3",
+    "supertest": "^6.1.3"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
+    "extends": "./node_modules/standard/eslintrc.json",
+    "env": {
+      "jest": true
+    }
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
