--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development nodemon index.js",
     "lint": "npm run lint",
     "start": "NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --verbose tests/notes.test.js",
+    "test": "NODE_ENV=test PORT=1234 jest --verbose tests/user.test.js",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
@@ -16,18 +16,20 @@
   "dependencies": {
     "@sentry/node": "6.2.0",
     "@sentry/tracing": "6.2.0",
+    "bcrypt": "5.0.1",
     "cors": "2.8.5",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "mongoose": "5.11.18"
+    "mongoose": "5.11.18",
+    "mongoose-unique-validator": "2.0.3"
   },
   "devDependencies": {
     "eslint": "7.20.0",
-    "jest": "^26.6.3",
+    "jest": "26.6.3",
     "nodemon": "2.0.7",
     "standard": "16.0.3",
-    "supertest": "^6.1.3"
+    "supertest": "6.1.3"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json",
