Add json web token class

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "5.11.18",
     "mongoose-unique-validator": "2.0.3"
   },
